// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EmploymentTypeField /> matches snapshot 1`] = `
<select
  class="sc-idOhPF gSNtny"
  id="employmentTypeField"
  name="name"
  type="text"
>
  <option
    class="sc-hHftDr bhxQtR"
    disabled=""
    value="select"
  >
    wybierz 
  </option>
  <option
    value="fixed"
  >
    umowa o pracę na czas nieokreślony
  </option>
  <option
    value="temporary"
  >
    umowa o pracę na czas określony
  </option>
  <option
    value="self_employed"
  >
    samozatrudnienie
  </option>
  <option
    value="fixed_partial"
  >
    umowa o pracę na czas nieokreślony (niepełny etat)
  </option>
  <option
    value="government"
  >
    stanowisko rządowe
  </option>
  <option
    value="unemployed"
  >
    bezrobotny
  </option>
  <option
    value="pension"
  >
    emeryt/rencista
  </option>
  <option
    value="agriculture"
  >
    gospodarstwo rolne
  </option>
  <option
    value="student"
  >
    student
  </option>
  <option
    value="housewife"
  >
    gospodyni domowa
  </option>
  <option
    value="other"
  >
    inne
  </option>
  <option
    value="service_contract"
  >
    umowa zlecenie / umowa o dzieło
  </option>
</select>
`;

exports[`<EmploymentTypeField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-iBPRYJ janqdG"
    id="testForm"
  >
    <div
      class="sc-kEjbxe lcGTJL"
    >
      <label
        for="name"
      >
        Test*
      </label>
      <div
        class="sc-bkzZxe jbuFap"
      >
        <select
          class="sc-idOhPF emkUjz"
          id="employmentTypeField"
          label="Test"
          name="name"
          required=""
          type="text"
        >
          <option
            class="sc-hHftDr bhxQtR"
            disabled=""
            value="select"
          >
            wybierz *
          </option>
          <option
            value="fixed"
          >
            umowa o pracę na czas nieokreślony
          </option>
          <option
            value="temporary"
          >
            umowa o pracę na czas określony
          </option>
          <option
            value="self_employed"
          >
            samozatrudnienie
          </option>
          <option
            value="fixed_partial"
          >
            umowa o pracę na czas nieokreślony (niepełny etat)
          </option>
          <option
            value="government"
          >
            stanowisko rządowe
          </option>
          <option
            value="unemployed"
          >
            bezrobotny
          </option>
          <option
            value="pension"
          >
            emeryt/rencista
          </option>
          <option
            value="agriculture"
          >
            gospodarstwo rolne
          </option>
          <option
            value="student"
          >
            student
          </option>
          <option
            value="housewife"
          >
            gospodyni domowa
          </option>
          <option
            value="other"
          >
            inne
          </option>
          <option
            value="service_contract"
          >
            umowa zlecenie / umowa o dzieło
          </option>
        </select>
        <span
          class="sc-dIUggk hceYpr"
        />
      </div>
      <span
        class="sc-kstrdz hYtgrW"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<EmploymentTypeField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-iBPRYJ janqdG"
    id="testForm"
  >
    <div
      class="sc-kEjbxe lcGTJL"
    >
      <label
        for="name"
      >
        Test
      </label>
      <div
        class="sc-bkzZxe jbuFap"
      >
        <select
          class="sc-idOhPF gSNtny"
          id="employmentTypeField"
          label="Test"
          name="name"
          type="text"
        >
          <option
            class="sc-hHftDr bhxQtR"
            disabled=""
            value="select"
          >
            wybierz 
          </option>
          <option
            value="fixed"
          >
            umowa o pracę na czas nieokreślony
          </option>
          <option
            value="temporary"
          >
            umowa o pracę na czas określony
          </option>
          <option
            value="self_employed"
          >
            samozatrudnienie
          </option>
          <option
            value="fixed_partial"
          >
            umowa o pracę na czas nieokreślony (niepełny etat)
          </option>
          <option
            value="government"
          >
            stanowisko rządowe
          </option>
          <option
            value="unemployed"
          >
            bezrobotny
          </option>
          <option
            value="pension"
          >
            emeryt/rencista
          </option>
          <option
            value="agriculture"
          >
            gospodarstwo rolne
          </option>
          <option
            value="student"
          >
            student
          </option>
          <option
            value="housewife"
          >
            gospodyni domowa
          </option>
          <option
            value="other"
          >
            inne
          </option>
          <option
            value="service_contract"
          >
            umowa zlecenie / umowa o dzieło
          </option>
        </select>
        <span
          class="sc-dIUggk hceYpr"
        />
      </div>
    </div>
  </form>
</div>
`;

exports[`<EmploymentTypeField /> select field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-iBPRYJ janqdG"
    id="testForm"
  >
    <div
      class="sc-kEjbxe lcGTJL"
    >
      <div
        class="sc-bkzZxe jbuFap"
      >
        <select
          class="sc-idOhPF emkUjz"
          id="employmentTypeField"
          name="name"
          type="text"
        >
          <option
            class="sc-hHftDr bhxQtR"
            disabled=""
            value="select"
          >
            wybierz 
          </option>
          <option
            value="fixed"
          >
            umowa o pracę na czas nieokreślony
          </option>
          <option
            value="temporary"
          >
            umowa o pracę na czas określony
          </option>
          <option
            value="self_employed"
          >
            samozatrudnienie
          </option>
          <option
            value="fixed_partial"
          >
            umowa o pracę na czas nieokreślony (niepełny etat)
          </option>
          <option
            value="government"
          >
            stanowisko rządowe
          </option>
          <option
            value="unemployed"
          >
            bezrobotny
          </option>
          <option
            value="pension"
          >
            emeryt/rencista
          </option>
          <option
            value="agriculture"
          >
            gospodarstwo rolne
          </option>
          <option
            value="student"
          >
            student
          </option>
          <option
            value="housewife"
          >
            gospodyni domowa
          </option>
          <option
            value="other"
          >
            inne
          </option>
          <option
            value="service_contract"
          >
            umowa zlecenie / umowa o dzieło
          </option>
        </select>
        <span
          class="sc-dIUggk hceYpr"
        />
      </div>
      <span
        class="sc-kstrdz hYtgrW"
      >
        Podane dane są nieprawidłowe
      </span>
    </div>
  </form>
</div>
`;
